--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
  <footer class="text-center bg-danger " id="footer" style="background-color:;">
      <a href="https://www.twitter.com"><i class="fab fa-twitter text-white" ></i></a>
-     <a href="https://www.facebook.com"><i class="fab fa-facebook-f text-white"></i></a>
+     <a href=""><i class="fab fa-facebook-f text-white"></i></a>
      <a href="https://www.instagram"><i class="fab fa-instagram text-white" ></i></a>
 
    
